--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,10 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/CSS/index.css">
     <title>indice</title>
     <!------------------------>
     {# Cargamos la librería #}
@@ -13,21 +13,69 @@
 	  {# CSS Bootstrap #}
 	  {% bootstrap_css %}
     <!------------------------>
+    <link rel="stylesheet" href="{% static 'CSS/index.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
-    <h1>HOLAAAAAA</h1>
-    {% block content %}
-    
-    {% endblock %}
+    <div class="titulo">
+        <h2>Bienvenido al Sistema de Inventario Sunchemical</h2>
+    </div>
+    <!----------------------- AQUÍ DEBERIA DE IR UN NAVBAR ---------------------->
+    <!--<a href="dispositivo_list">ok</a>-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index">home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="dispositivo_list">Dispositivos<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+      <div class="container">
+          {% block content %}
 
+          {% endblock %}
+      </div>
 
-    {% block footer %}
-    <hr>
-    <p>ESTO ES EL FOOTER</p>
-    {% endblock %}
+          {% block footer %}
+          <hr>
+          <div class="footer">
+            <p>Sun Chemical (Chile) S.A.</p>
+          </div> 
+          {% endblock %}
 
-    <!-------------------------------------------------------------------------------------------->
-    {# JS y jQuery Bootstrap #}
-	{% bootstrap_javascript jquery='full' %}
+          <!-------------------------------------------------------------------------------------------->
+          {# JS y jQuery Bootstrap #}
+          {% bootstrap_javascript jquery='full' %}  
+          
+          <!-- REQUIRED SCRIPTS -->
+          <!-- jQuery -->
+          <script src="{% static 'js/CrudDisp.js' %}"></script>
 </body>
 </html>
