--- a/core/templates/core/administrador/dispositivo_list.html
+++ b/core/templates/core/administrador/dispositivo_list.html
@@ -58,53 +58,53 @@
                     </div>
                     <div class="form-group">
                       <label for="">Dispositivo</label>
-                      <select class="form-control md-2" id="idNom">
+                      <select class="form-control md-2" id="idNom" required>
                         <option selected>Selecciona Dispositivo...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        {% for tipo in tipo %}
+                        <option value="{{tipo.idTipoDisp}}">{{tipo.nomTipo}}</option>
+                        {% endfor %}
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="">Marca</label>
-                      <select class="form-control md-2" id="idMar">
+                      <select class="form-control md-2" id="idMar" required>
                         <option selected>Selecciona Marca...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        {% for marc in marc %}
+                        <option value="{{marc.idMarca}}">{{marc.nomMarca}}</option>
+                        {% endfor %}
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="">Modelo</label>
-                      <select class="form-control md-2" id="idMod">
+                      <select class="form-control md-2" id="idMod" required>
                         <option selected>Selecciona Modelo...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        {% for mode in mode %}
+                        <option value="{{mode.idModelo}}">{{mode.nomModelo}}</option>
+                        {% endfor %}
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="">Nro de Serie</label>
-                      <input type="text" class="form-control md-2" id="idNro">
+                      <input type="text" class="form-control md-2" id="idNro" required>
                     </div>
                     <div class="form-group">
                       <label for="">Comentario</label>
                       <textarea class="form-control md-2" id="Textarea1" rows="3"></textarea>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="option1" checked>
+                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="1" checked>
                       <label class="form-check-label" for="exampleRadios1">
                         Habilitado
                       </label>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="option2">
+                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="2">
                       <label class="form-check-label" for="exampleRadios2">
                         Deshabilitado
                       </label>
                     </div>
                     <div class="form-check disabled">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="option3" >
+                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="3" >
                       <label class="form-check-label" for="exampleRadios3">
                         En Uso
                       </label>
@@ -112,11 +112,11 @@
                     <br>
                     <div class="form-group">
                       <label for="">Sucursal</label>
-                      <select class="form-control md-2" id="idSuc">
+                      <select class="form-control md-2" id="idSuc" required>
                         <option selected>Selecciona Sucursal...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        {% for sucursa in sucursa %}
+                        <option value="{{sucursa.idSucursal}}">{{sucursa.nomSucursal}}</option>
+                        {% endfor %}
                       </select>
                     </div>                   
                     <div class="form-group">
@@ -127,7 +127,7 @@
                   </form>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary">Guardar Cambios</button>
+                  <button type="button" id="btGuardar" class="btn btn-primary">Guardar Cambios</button>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 </div>
               </div>
