intento de ajax

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -72,10 +72,13 @@
 
           <!-------------------------------------------------------------------------------------------->
           {# JS y jQuery Bootstrap #}
+          <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
           {% bootstrap_javascript jquery='full' %}  
           
           <!-- REQUIRED SCRIPTS -->
+         
           <!-- jQuery -->
           <script src="{% static 'js/CrudDisp.js' %}"></script>
+          
 </body>
 </html>
