--- a/core/templates/core/administrador/dispositivo_list.html
+++ b/core/templates/core/administrador/dispositivo_list.html
@@ -50,15 +50,17 @@
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
+                
                 <div class="modal-body">
                   <form>
+                                       
                     <div class="form-group">
                       <label for="correlativo">ID</label>
                       <input type="number" class="form-control md-2" id="idcorr" disabled>
                     </div>
                     <div class="form-group">
                       <label for="">Dispositivo</label>
-                      <select class="form-control md-2" id="idNom" required>
+                      <select class="form-control md-2" name="Nom" id="idNom" required>
                         <option selected>Selecciona Dispositivo...</option>
                         {% for tipo in tipo %}
                         <option value="{{tipo.idTipoDisp}}">{{tipo.nomTipo}}</option>
@@ -67,7 +69,7 @@
                     </div>
                     <div class="form-group">
                       <label for="">Marca</label>
-                      <select class="form-control md-2" id="idMar" required>
+                      <select class="form-control md-2" name="Mar" id="idMar" required>
                         <option selected>Selecciona Marca...</option>
                         {% for marc in marc %}
                         <option value="{{marc.idMarca}}">{{marc.nomMarca}}</option>
@@ -76,7 +78,7 @@
                     </div>
                     <div class="form-group">
                       <label for="">Modelo</label>
-                      <select class="form-control md-2" id="idMod" required>
+                      <select class="form-control md-2" name="Mod" id="idMod" required>
                         <option selected>Selecciona Modelo...</option>
                         {% for mode in mode %}
                         <option value="{{mode.idModelo}}">{{mode.nomModelo}}</option>
@@ -85,26 +87,26 @@
                     </div>
                     <div class="form-group">
                       <label for="">Nro de Serie</label>
-                      <input type="text" class="form-control md-2" id="idNro" required>
+                      <input type="text" class="form-control md-2" name="Nro" id="idNro" required>
                     </div>
                     <div class="form-group">
                       <label for="">Comentario</label>
-                      <textarea class="form-control md-2" id="Textarea1" rows="3"></textarea>
+                      <textarea class="form-control md-2" id="Textarea1" name="Texto" rows="3"></textarea>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="1" checked>
+                      <input class="form-check-input" type="radio"  name="Estado" id="idEstado" value=1 checked>
                       <label class="form-check-label" for="exampleRadios1">
                         Habilitado
                       </label>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="2">
+                      <input class="form-check-input" type="radio"  name="Estado" id="idEstado" value=2>
                       <label class="form-check-label" for="exampleRadios2">
                         Deshabilitado
                       </label>
                     </div>
                     <div class="form-check disabled">
-                      <input class="form-check-input" type="radio" name="estado" id="idEstado" value="3" >
+                      <input class="form-check-input" type="radio"  name="Estado" id="idEstado" value=3 >
                       <label class="form-check-label" for="exampleRadios3">
                         En Uso
                       </label>
@@ -112,7 +114,7 @@
                     <br>
                     <div class="form-group">
                       <label for="">Sucursal</label>
-                      <select class="form-control md-2" id="idSuc" required>
+                      <select class="form-control md-2" name="Suc" id="idSuc" required>
                         <option selected>Selecciona Sucursal...</option>
                         {% for sucursa in sucursa %}
                         <option value="{{sucursa.idSucursal}}">{{sucursa.nomSucursal}}</option>
@@ -121,7 +123,7 @@
                     </div>                   
                     <div class="form-group">
                       <label for="">Usuario</label>
-                      <input type="text" class="form-control md-2" id="idUsu" placeholder="Ingrese rut xxxxxxxx-x">
+                      <input type="text" class="form-control md-2" name="Usu" id="idUsu" placeholder="Ingrese rut xxxxxxxx-x">
                     </div>
                     <small id="emailHelp" class="form-text text-muted">Antes de guardar verifique los cambios</small>
                   </form>
