--- a/core/static/CSS/index.css
+++ b/core/static/CSS/index.css
@@ -1,6 +1,8 @@
-
+body{
+    background-color: whitesmoke;
+}
 .imagen{
-    background-image: url('sun.jpg');
+    background-image: url('bodega.jpg');
 }
 
 .titulo, .footer{
