--- a/core/templates/core/principal.html
+++ b/core/templates/core/principal.html
@@ -4,6 +4,6 @@
    {% block content %}
    <br>
    <div class="imagen">
-        <img src="{% static 'image/sun.jpg' %}" alt="bienvenida">
+        <img src="{% static 'image/bodega.jpg' %}" alt="bienvenida">
    </div>
    {% endblock %}
